# filters_and_sketches

./: .gitignore  CMS-write.txt  Cargo.toml  Cuckoo-write.txt  LICENSE  NitroCMS-write.txt  NitroCuckoo-write.txt  README.md  SpaceSaving-write.txt  cms-nomi.bat  compact.bat  compare.bat  hash-write  hash-write.txt  nitrohash-write.txt  run-all.bat  timeread.bat  timereadwrite.bat  timewrite-Chicago16.bat  timewrite-Chicago1610Mil.bat  timewrite-Chicago16Small.bat  timewrite-SJ14.small.bat  timewrite-all.bat  timewrite-ny19A.bat  timewrite-ny19B.bat  timewrite.bat
python/: main.py
results/: CMS-compare.txt  CMS-read.txt  CMS-readwrite.txt  CMS-write.txt  CMSNOMI-compare.txt  CMSNOMI-read.txt  CMSNOMI-readwrite.txt  CMSNOMI-write.txt  CMSNOMI.txt  Cuckoo-compare.txt  Cuckoo-read.txt  Cuckoo-readwrite.txt  Cuckoo-write.txt  NitroCMS-compare.txt  NitroCMS-read.txt  NitroCMS-readwrite.txt  NitroCMS-write.txt  NitroCompact-compare.txt  NitroCompact-read.txt  NitroCompact-readwrite.txt  NitroCompact-write.txt  NitroCompact.txt  NitroCuckoo-compare.txt  NitroCuckoo-read.txt  NitroCuckoo-readwrite.txt  NitroCuckoo-write.txt  SpaceSaving-compare.txt  SpaceSaving-rap-compare.txt  SpaceSaving-rap-read.txt  SpaceSaving-rap-readwrite.txt  SpaceSaving-rap-write.txt  SpaceSaving-read.txt  SpaceSaving-readwrite.txt  SpaceSaving-write.txt  filter_and_sketches.e427672  filter_and_sketches.e427674  filter_and_sketches.e427676  filter_and_sketches.e427677  filter_and_sketches.e427678  filter_and_sketches.e427679  (+136 more)
src/: lib-copy-2.rs  lib-copy-3.rs  lib-copy.rs  lib.rs  main.rs  (+1 more)
(+10 files in other folders)
