[package]
name = "filters_and_sketches"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "5.4.0"
amadeus-streaming = "0.4.3"
clap = { version = "4.0.29", features = ["derive"] }
serde = "1.0.151"
twox-hash = "1.6.3"
rand = "0.8.5"
rand_distr = "0.4.3"
num-traits = "0.2.15"
increment = "0.3.0"
priority-queue = "1.3.0"
byteorder = "1"
cap = "0.1.2"

[features]
#default = ["stats"]
stats = ["cap/stats"]